TestSuite/errors/err0382.pas
begin
  var x := 'aaa'??2;
end.